[project]
name = "kint-vault-cli"
version = "0.1.0"
description = "Unified secrets management CLI — backend-agnostic wrapper for Doppler and Infisical"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
kint-vault = "kint_vault:main"

[tool.hatch.build.targets.wheel]
only-include = ["kint_vault.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
